# crewtui

./: .env.example  .gitignore  DOCS.txt  README.md  agent_memory.py  cli.py  config_loader.py  crew.py  crew_memory.py  cron_engine.py  daemon.py  heartbeat.py  model_wizard.py  project_config.sample.json  pyproject.toml  semantic_router.py  setup_wizard.py  telegram_listener.py  telegram_notify.py  test_semantic_router.py  tui.py
