[project]
name = "starling"
version = "1.1.0-alpha"
description = "Starling — Config-driven CrewAI Terminal UI with semantic routing and heartbeat task engine"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "crewai[litellm,tools]>=1.14.1",
    "ddgs>=9.13.0",
    "fastembed>=0.8.0",
    "lancedb>=0.30.0",
    "matplotlib>=3.10.8",
    "openpyxl>=3.1.5",
    "pandas>=3.0.2",
    "pyperclip>=1.11.0",
    "python-dotenv>=1.1.1",
    "python-pptx>=1.0.2",
    "tavily-python>=0.7.23",
    "textual>=8.2.3",
]

[project.scripts]
starling = "cli:main"

[tool.setuptools]
py-modules = ["cli", "tui", "crew", "heartbeat", "agent_memory", "crew_memory", "model_wizard", "telegram_notify", "telegram_listener", "config_loader", "setup_wizard", "daemon", "cron_engine", "semantic_router"]
